next
----
- Fixed renderFile method (AlexandrZ, Sam Dark)

0.9.2
-----
- Changed translation category to 'yiiext'.
- New naming conventions.

0.9.1
-----
- Changes for new version Twig http://blog.twig-project.org/post/266735026/twig-0-9-4-released

0.9
---
- Initial public release (Sam Dark)